kubernetes/components/cnpg/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-spotify-app
  namespace: analytics-for-spotify
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: analytics-for-spotify
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: spotify
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: analytics-for-spotify
          podSelector:
            matchLabels:
              app: analytics-for-spotify # serving.knative.dev/service: analytics-for-spotify
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: analytics-for-spotify
          podSelector:
            matchLabels:
              app: link-missing-artists
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-spotify-app-egress
  namespace: analytics-for-spotify
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: analytics-for-spotify
spec:
  podSelector:
    matchLabels:
      app: analytics-for-spotify # serving.knative.dev/service: analytics-for-spotify
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: analytics-for-spotify
          podSelector:
            matchLabels:
              cnpg.io/cluster: spotify
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-spotify-cronjob-egress
  namespace: analytics-for-spotify
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: analytics-for-spotify
spec:
  podSelector:
    matchLabels:
      app: link-missing-artists
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: analytics-for-spotify
          podSelector:
            matchLabels:
              cnpg.io/cluster: spotify
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-spotify-cluster
  namespace: analytics-for-spotify
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: analytics-for-spotify
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: spotify
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: analytics-for-spotify
          podSelector:
            matchLabels:
              cnpg.io/cluster: spotify
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: analytics-for-spotify
          podSelector:
            matchLabels:
              cnpg.io/cluster: spotify
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-spotify-webhook
  namespace: analytics-for-spotify
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: analytics-for-spotify
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: spotify
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - protocol: TCP
          port: 9443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-spotify-api-server
  namespace: analytics-for-spotify
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: analytics-for-spotify
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: spotify
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-kube-apiserver
          podSelector:
            matchLabels:
              app: openshift-kube-apiserver
      ports:
        - protocol: TCP
          port: 6443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-spotify-dns
  namespace: analytics-for-spotify
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: analytics-for-spotify
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: spotify
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
          podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
      ports:
        - protocol: UDP
          port: 5353
        - protocol: TCP
          port: 5353
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-spotify-monitoring
  namespace: analytics-for-spotify
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: analytics-for-spotify
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: spotify
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-user-workload-monitoring
      ports:
        - protocol: TCP
          port: 9187
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-spotify-pgdump-ingress
  namespace: analytics-for-spotify
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: analytics-for-spotify
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: spotify
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app: pgdump-cron
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-spotify-cnpg-operator
  namespace: analytics-for-spotify
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: analytics-for-spotify
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: spotify
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - protocol: TCP
          port: 8000
